# gmock_test_explorer

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
Tests/: CMakeLists.txt  PatternDataTest.cpp
vcpkg-ports/ports/gtest/: portfile.cmake  vcpkg.json
vcpkg-ports/versions/: baseline.json
vcpkg-ports/versions/g-/: gtest.json
